Fixed more mobile layout issues

--- a/apps/blog/static/css/blog.css
+++ b/apps/blog/static/css/blog.css
@@ -38,8 +38,6 @@ h1, h2, h3, h4 {
 .navbar-custom {
     background-color: #368eb1;
     margin-top: 0;
-    padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
 }
 /* change the brand and text color */
 .navbar-custom .navbar-brand,
