--- a/apps/home/static/css/home.css
+++ b/apps/home/static/css/home.css
@@ -36,6 +36,8 @@
   margin-right: 40px;
   margin-top: 20px;
   margin-bottom: 20px;
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
 }
 
 h1, h2, h3, h4 {
@@ -95,11 +97,6 @@ header.masthead .masthead-heading {
     line-height: 4.5rem;
     margin-bottom: 4rem;
   }
-}
-
-footer.footer {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }
 
 tr>td {
